[gd_scene load_steps=4 format=3 uid="uid://b3yum78kdje4b"]

[ext_resource type="Script" path="res://gui/MainMenu.gd" id="1_o7wb0"]
[ext_resource type="Texture2D" uid="uid://rkf5yphhfu3d" path="res://assets/kenney_pixel-ui-pack/9-Slice/Colored/blue.png" id="2_kr0pr"]
[ext_resource type="Script" path="res://multiplayer/ServerListener.gd" id="3_38a4a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7wb0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -72.0
offset_right = 96.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kr0pr")
metadata/_edit_lock_ = true

[node name="HostButton" type="Button" parent="."]
layout_mode = 2
offset_left = 416.0
offset_top = 208.0
offset_right = 736.0
offset_bottom = 239.0
text = "Host"

[node name="ServerList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -52.0
offset_right = 168.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ServerListener" type="Node" parent="."]
script = ExtResource("3_38a4a")

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="new_server" from="ServerListener" to="." method="_on_server_listener_new_server"]
[connection signal="remove_server" from="ServerListener" to="." method="_on_server_listener_remove_server"]
